--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
    <head>
         <title>My awesome web page</title>
     </head>
-   <h1>Welcome to this websit</h1>
+   <h1>Welcome to this website</h1>
+   <img src="https://avatars.githubusercontent.com/u/98924680?v=4">
   
   <body>
     Hello there, awesome person! 
