--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   
   <body>
     Hello there, awesome person! 
+ <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
   </body>
 </html>
