--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
         <title>My awesome web page</title>
     </head>
    <h1>Welcome to this website</h1>
-   <img src="https://avatars.githubusercontent.com/u/98924680?v=4">
-  
+ 
   <body>
     Hello there, awesome person! 
-  </body>
+ <ol>
+    <li>Youtube</li>
+    <li>Netflix</li>
+    <li>Twitch</li>
+</ol>
+  <img src="https://avatars.githubusercontent.com/u/98924680?v=4"> 
+   </body>
 </html>
