--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     </head>
    <h1>Welcome to this website</h1>
   
+ <body>
+ <li><a href="https://github.com">This is a link to GitHub!</a></li>
   
-  <body>
-    Hello there, awesome person! 
+   
+   Hello there, awesome person! 
  <ul>
     <li>This</li>
     <li>Is an</li>
